--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <script src="estudo.js"></script>
 </head>
 <body>
+
 <button onclick="escreva()">Clique aqui</button>
+<button onclick="repete()">Coisa For </button>
+<button onclick="minhaLista()">Mostar Lista </button>
+
 </body>
 </html>
