--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
 </head>
 <body>
 
-<button onclick="escreva()">Clique aqui</button>
-<button onclick="repete()">Coisa For </button>
-<button onclick="minhaLista()">Mostar Lista </button>
+
+Capital:  <input id="valor" type="text">     <br>
+
+   Juros Mensais:  <input id="juros" type="text">     <br>
+
+Nr. de Meses:  <input id="meses" type="text">     <br>
+
+   <button onclick="total()">Calcula</button>
+
+
+
 
 </body>
 </html>
