--- a/index.html
+++ b/index.html
@@ -35,22 +35,28 @@
 
 <input type="checkbox" id ="input-calcESqC">
 <div id="calculadoraESC">
-   <label for="input-calcEaSG">
+   <label for="input-calcEqSG">
         <h3> Equação <br> Segundo Grau </h3>
    </label>
    <div class="calcES"> 
 
 
    <div id="spRaiz">
-   <span id="raiz"> Total: 0,00</span>
+   <span id="raiz"> X1 e X2 </span>
 </div>
-   a: <input id="a" type="text"> <br>
-   b: <input id="b" type="text"> <br>
-   s: <input id="c" type="text"> <br>
+    <input id="a" placeholder="a" type="text"> <br>
+    <input id="b" placeholder="b" type="text"> <br>
+    <input id="c" placeholder="c" type="text"> <br>
    <button onclick="calculaRaiz()">Calcula</button>
 </div>
+
+
+
+
+
+
+
+
 </div>
-
 </body>
-
 </html>
