--- a/index.html
+++ b/index.html
@@ -32,12 +32,15 @@
       </div>
    </div>
 </div>
+</br>
 
-<input type="checkbox" id ="input-calcESqC">
+<input type="checkbox" id ="input-calcEqSG">
 <div id="calculadoraESC">
+
    <label for="input-calcEqSG">
         <h3> Equação <br> Segundo Grau </h3>
    </label>
+
    <div class="calcES"> 
 
 
